--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "YaRunZ",
+  "name": "yarunz",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -11,40 +11,48 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
+    "@angular/animations": "^5.0.00",
+    "@angular/cdk": "^5.0.00",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
+    "@angular/material": "^5.0.00",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@auth0/angular-jwt": "^1.0.0",
     "@ionic-native/core": "^4.15.0",
     "@ionic-native/geolocation": "^4.15.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/http": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
+    "angular-progress-bar": "^1.0.8",
     "angularfire2": "^5.0.2",
     "cordova-android": "7.1.1",
+    "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-geolocation": "4.0.1",
-    "cordova-plugin-googlemaps": "^2.1.0",
+    "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^5.5.2",
+    "firebase": "^5.5.3",
+    "global": "^4.3.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.1.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
+    "typings": "^2.1.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -53,6 +61,9 @@
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
+  "config": {
+    "ionic_copy": "./config/copy.config.js"
+  },
   "cordova": {
     "plugins": {
       "cordova-plugin-geolocation": {
@@ -66,12 +77,7 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyCmP4Ylc1nwroo8vZ2UCW7pamprKNusD6A",
-        "API_KEY_FOR_IOS": "AIzaSyCmP4Ylc1nwroo8vZ2UCW7pamprKNusD6A",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
