--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@auth0/angular-jwt": "^1.0.0",
     "@ionic-native/core": "^4.15.0",
+    "@ionic-native/firebase": "^4.16.0",
     "@ionic-native/geolocation": "^4.15.0",
     "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/http": "^4.15.0",
@@ -33,12 +34,13 @@
     "@ionic/storage": "2.2.0",
     "angular-progress-bar": "^1.0.8",
     "angularfire2": "^5.0.2",
-    "cordova-android": "7.1.1",
+    "cordova-android": "^7.1.1",
     "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-geolocation": "4.0.1",
-    "cordova-plugin-googlemaps": "^2.4.6",
+    "cordova-plugin-googlemaps": "^2.1.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -77,7 +79,12 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCTUO8mVPiYvT9lcxA_GRGI5GipYke4oLw",
+        "API_KEY_FOR_IOS": "AIzaSyCTUO8mVPiYvT9lcxA_GRGI5GipYke4oLw"
+      },
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
